[package]
name = "ferrous-socks"
version = "1.0.5"
authors = ["James Brown <jbrown@easypost.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/EasyPost/ferrous-socks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "^1.5", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
derive_more = "0.99"
byteorder = "1"
log = "0.4"
env_logger = "0.7"
clap = { version = "3", features = ["color", "cargo", "env"] }
permit = "0.1.4"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
ip_network = { version = "0.3", features = ["serde"] }
serde_json = "1"
syslog = "5"
thiserror = "1"

[dev-dependencies]
hex-literal = "0.3"
