[package]
name = "ferrous-socks"
version = "1.0.7"
authors = ["James Brown <jbrown@easypost.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/EasyPost/ferrous-socks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1"
clap = { version = "3", features = ["color", "cargo", "env"] }
env_logger = "0.9"
futures-core = "0.3"
futures-util = { version = "0.3", default_features = false, features=["std"] }
ip_network = { version = "0.3", features = ["serde"] }
log = "0.4"
permit = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syslog = "6"
thiserror = "1"
tokio = { version = "^1.5", features = ["rt-multi-thread", "net", "time", "macros", "sync", "io-util", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.5"

[dev-dependencies]
hex-literal = "0.3"
